--- a/styles/contact.css
+++ b/styles/contact.css
@@ -6,26 +6,28 @@
 .contact-form-table > input {
     display: flex;
     flex-direction: column;
-    margin-left: 45%;
+    margin: auto;
 }
 
 .contact-form-row {
     display: flex;
     flex-direction: row;
     justify-content: center;
+    flex-wrap: wrap;
 }
 
 .contact-input {
     border-radius: 25px;
     margin: 5px;
     font-size: 24px;
+    border: none;
 }
 
 .contact-textarea {
     border-radius: 25px;
     font-size: 24px;
-    margin-left: 33%;
-    width: 33%;
+    margin: auto;
+    width: 50%;
     background: whitesmoke;
 }
 
