--- a/styles/hobbies.css
+++ b/styles/hobbies.css
@@ -1,7 +1,5 @@
-.accordion {
-    width: 80%;
-    margin-left: 10%;
-    border-radius: 50%;
+#hobbies > div > div {
+    margin: auto;
 }
 
 .hobbies-list {
@@ -9,14 +7,12 @@
     flex-direction: column;
     justify-content: space-around;
     flex-wrap: wrap;
-    margin-left: 33%;
 }
 
 .hobby-item {
     border: 1px solid black;
     border-radius: 100%;
     padding: 50px;
-    width: 50%;
     color: rgb(109, 107, 107);
     font-size: 30px;
 }
