--- a/styles/projects.css
+++ b/styles/projects.css
@@ -7,7 +7,7 @@
 .card > img {
     height: 25%;
     width: 25%;
-    margin-left: 34%;
+    margin: auto;
 }
 
 .project-settings-row {
@@ -16,6 +16,6 @@
     justify-content: space-between;
 }
 
-.computer-assistance {
-    font-size: 14px;
+.card {
+    height: max-content;
 }
